# smaddanki

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
base_template/: __main__.py  create_username.py
docs/: code_quality.md
